# cpp-library-template

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  build_project.sh  clean_project.sh  format_project.py
src/: library.cpp
src/include/: library.h
src/include/project/: library.h
tests/: test.cpp
